<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hawks Nest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_button">Create User</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="main_desc">Select a Residence Hall Complex</string>
    <string name="choose_hdorm">Hasbrouck Complex</string>
    <string name="choose_hdorm_desc">Pick a residence hall in Hasbrouck Complex</string>
    <string name="crispell">Crispell Hall</string>
    <string name="dubois">DuBois Hall</string>
    <string name="bevier">Bevier Hall</string>
    <string name="deyo">Deyo Hall</string>
    <string name="lefevre">Lefevre Hall</string>
    <string name="choose_pdorm">Parker Complex</string>
    <string name="choose_pdorm_desc">Pick a residence hall in Parker Complex</string>
    <string name="bliss">Bliss Hall</string>
    <string name="bouton">Bouton Hall</string>
    <string name="capen">Capen Hall</string>
    <string name="gage">Gage Hall</string>
    <string name="scudder">Scudder Hall</string>
    <string name="collango">College/Shango Hall</string>
    <string name="choose_sdorm">South Complex</string>
    <string name="choose_sdorm_desc">Pick a residence hall in South Complex</string>
    <string name="esopus">Esopus Hall</string>
    <string name="lenape">Lenape Hall</string>
    <string name="title_activity_add_edit_r">Resident Asst.</string>
    <string name="add_edit_ra">Add/Edit RA</string>
    <string name="view_ras">View RAs</string>
    <string name="no_ras">No Resident Assistants</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="hint_name">Name (Required)</string>
    <string name="hint_dorm">Residence Hall</string>
    <string name="hint_room">Room #</string>
    <string name="hint_ext">Ext #</string>
    <string name="label_name">Name:</string>
    <string name="label_dorm">Residence Hall:</string>
    <string name="label_room">Room #:</string>
    <string name="label_ext">Ext #:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a contact name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_ralist">Resident Assistants</string>

</resources>
