<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/nameLabelTextView"
        style="@style/ContactLabelTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/label_name" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_column="1"
        android:layout_row="0"
        style="@style/ContactTextView" />

    <TextView
        android:id="@+id/dormLabelTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label_dorm"
        style="@style/ContactLabelTextView" />

    <TextView
        android:id="@+id/dormTextView"
        android:layout_column="1"
        android:layout_row="1"
        style="@style/ContactTextView" />

    <TextView
        android:id="@+id/roomLabelTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/label_room"
        style="@style/ContactLabelTextView" />

    <TextView
        android:id="@+id/roomTextView"
        android:layout_column="1"
        android:layout_row="2"
        style="@style/ContactTextView" />
    
    <TextView
        android:id="@+id/extLabelTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/label_ext"
        style="@style/ContactLabelTextView" />

    <TextView
        android:id="@+id/extTextView"
        android:layout_column="1"
        android:layout_row="3"
        style="@style/ContactTextView" />
    
    
</GridLayout>

</ScrollView>
