<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutSouth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb732"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ege493.sunynp.hawksnest2014.ChooseSDorm$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewPName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/choose_sdorm"
        android:textColor="#19198c"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textViewPDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/choose_sdorm_desc"
        android:textColor="#19198c" />

    <GridLayout
        android:id="@+id/gridViewS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_gravity="left"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="#19198c"
            android:text="@string/esopus"
            android:textColor="#ffb732" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_gravity="left"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="#19198c"
            android:text="@string/lenape"
            android:textColor="#ffb732" />
    </GridLayout>

</LinearLayout>